<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ft_hangouts</string>
    <string name="add_contact">Ajouter un contact</string>
    <string name="edit_contact">Modifier le contact</string>
    <string name="no_contacts">Aucun contact disponible</string>
    <string name="name">Nom</string>
    <string name="phone">Téléphone</string>
    <string name="email">Email</string>
    <string name="address">Adresse</string>
    <string name="note">Note</string>
    <string name="save">Enregistrer</string>
    <string name="field_required">Ce champ est obligatoire</string>
    <string name="contact_saved">Contact enregistré</string>
    <string name="error_saving_contact">Erreur lors de l\'enregistrement du contact</string>
    <string name="contact_updated">Contact mis à jour</string>
    <string name="error_updating_contact">Erreur lors de la mise à jour du contact</string>
    <string name="contact_deleted">Contact supprimé</string>
    <string name="error_loading_contact">Erreur lors du chargement du contact</string>
    <string name="edit">Modifier</string>
    <string name="delete">Supprimer</string>
    <string name="message">Message</string>
    <string name="send">Envoyer</string>
    <string name="error_sending_message">Erreur lors de l\'envoi du message</string>
    <string name="change_header_color">Changer la couleur de l\'en-tête</string>
    <string name="color_default">Par défaut</string>
    <string name="color_red">Rouge</string>
    <string name="color_green">Vert</string>
    <string name="color_blue">Bleu</string>
    <string name="color_purple">Violet</string>
    <string name="background_time">Application mise en arrière-plan à</string>
    
    <string name="change_language">Changer de langue</string>
    <string name="language_settings">Paramètres de langue</string>
    <string name="language_french">Français</string>
    <string name="language_english">Anglais</string>
    <string name="current_language">Langue actuelle</string>
    
    <string name="toggle_dark_mode">Mode nuit/jour</string>
    <string name="dark_mode_enabled">Mode nuit activé</string>
    <string name="dark_mode_disabled">Mode jour activé</string>
    
    <string name="name_too_long">Le nom ne peut pas dépasser 30 caractères</string>
    <string name="phone_invalid_format">Le téléphone doit contenir uniquement des chiffres</string>
    <string name="phone_too_long">Le téléphone ne peut pas dépasser 20 chiffres</string>
    <string name="email_invalid_format">Format d\'email invalide (exemple: nom@domaine.fr)</string>
    
    <string name="no_email_saved">Pas d\'email enregistré</string>
    <string name="no_address_saved">Pas d\'adresse enregistrée</string>
    <string name="no_note_saved">Pas de note enregistrée</string>
    
    <string name="set_as_default_sms_app">Veuillez définir ft_hangouts comme app SMS par défaut dans les paramètres</string>
    <string name="permissions_granted">Toutes les permissions accordées</string>
    <string name="permissions_required">Certaines permissions sont nécessaires pour le bon fonctionnement</string>
    <string name="sms_permission_required">Permission d\'envoi SMS requise</string>
    <string name="message_sent">Message envoyé</string>
    <string name="send_error">Erreur d\'envoi: %1$s</string>
    
    <string name="select_photo">Sélectionner une photo</string>
    <string name="permission_denied">Permission refusée</string>
    <string name="invalid_image_format">Veuillez sélectionner une image valide</string>
    <string name="error_saving_image">Erreur lors de l\'enregistrement de l\'image</string>
    
    <string name="contact_auto_created">Nouveau contact créé automatiquement</string>
    <string name="new_message_from">Nouveau message de</string>
    
    <string name="call">Appeler</string>
    <string name="calling">Appel en cours vers</string>
    <string name="call_failed">Échec de l\'appel</string>
    <string name="call_permission_denied">Permission d\'appel refusée</string>
    <string name="no_phone_number">Aucun numéro de téléphone disponible</string>
    <string name="returned_from_call">Retour d\'appel</string>
    
    <string name="delete_message_title">Supprimer le message</string>
    <string name="delete_message_confirmation">Êtes-vous sûr de vouloir supprimer ce message ?</string>
    <string name="message_deleted">Message supprimé</string>
    <string name="cancel">Annuler</string>
    <string name="search_contacts">Rechercher des contacts...</string>
    <string name="block_contact">Bloquer</string>
    <string name="unblock_contact">Débloquer</string>
    <string name="contact_blocked">Contact bloqué</string>
    <string name="contact_unblocked">Contact débloqué</string>
    <string name="blocked_contacts">Contacts bloqués</string>
    <string name="no_blocked_contacts">Aucun contact bloqué</string>
    <string name="block_contact_confirmation">Êtes-vous sûr de vouloir bloquer %1$s ?</string>
    <string name="unblock_contact_confirmation">Êtes-vous sûr de vouloir débloquer %1$s ?</string>
    <string name="delete_contact_confirmation">Êtes-vous sûr de vouloir supprimer %1$s ?</string>
    <string name="confirm">Confirmer</string>
    <string name="deleted_contact">Contact supprimé</string>
</resources>