<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="100"
        android:title="@string/edit"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="101"
        android:title="@string/delete"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_block"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:orderInCategory="102"
        android:title="@string/block_contact"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_unblock"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="103"
        android:title="@string/unblock_contact"
        android:showAsAction="ifRoom" />
</menu>