<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ToolbarTheme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <RadioGroup
            android:id="@+id/colorRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <RadioButton
                android:id="@+id/radioDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color_default" />

            <RadioButton
                android:id="@+id/radioRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color_red" />

            <RadioButton
                android:id="@+id/radioGreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color_green" />

            <RadioButton
                android:id="@+id/radioBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color_blue" />

            <RadioButton
                android:id="@+id/radioPurple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color_purple" />

        </RadioGroup>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

    </LinearLayout>

</LinearLayout>