<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:title="@string/app_name"
        android:titleTextColor="@android:color/white"
        android:theme="@style/ToolbarTheme" />

    <RelativeLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/contactListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/addButton"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="0.5dp" />

        <TextView
            android:id="@+id/emptyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_contacts"
            android:textSize="18sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:background="@drawable/circle_button"
            android:text="+"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:contentDescription="@string/add_contact" />

    </RelativeLayout>

</LinearLayout>